added cancel button and some KMSI stuff

--- a/custom-content/Transmogrifier/es/selfAsserted.html
+++ b/custom-content/Transmogrifier/es/selfAsserted.html
@@ -35,6 +35,14 @@
     <div class="container self_asserted_container">
       <div class="row">
         <div class="col-lg-6">
+          <div class="buttons">
+            <a
+              href="https://www.microsoft.com"
+              style="display: block; text-align: left"
+              aria-label="Cancel"
+              formnovalidate=""
+              >Esp. Mogrifier Cancel - Go to MSFT</a
+            >
           <div class="panel panel-default">
             <div class="panel-body">
               <img
