--- a/custom-content/Transmogrifier/en/selfAsserted.html
+++ b/custom-content/Transmogrifier/en/selfAsserted.html
@@ -35,6 +35,15 @@
     <div class="container self_asserted_container">
       <div class="row">
         <div class="col-lg-6">
+          <div class="buttons">
+            <a
+              href="https://www.microsoft.com"
+              style="display: block; text-align: left"
+              aria-label="Cancel"
+              formnovalidate=""
+              >Mogrifier Cancel - Go to MSFT</a
+            >
+          </div>
           <div class="panel panel-default">
             <div class="panel-body">
               <img
