add password reset link journey

--- a/custom-content/Transmogrifier/en/selfAsserted.html
+++ b/custom-content/Transmogrifier/en/selfAsserted.html
@@ -52,6 +52,27 @@
                 src="https://wkb2ccontent.blob.core.windows.net/b2croot/assets/images/logo.svg"
               />
               <div id="api"></div>
+              <div
+                style="
+                  margin: 0 auto;
+                  width: 60%;
+                  height: 50px;
+                  background-color: #296ec6;
+                  opacity: 1;
+                  border-radius: 0.5rem;
+                  border: none;
+                  color: white;
+                  font-size: 1em;
+                  box-shadow: 0 0px 30px 0px #dae1f7;
+                "
+              >
+                <a
+                  href="https://wkb2ctest.b2clogin.com/wkb2ctest.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1A_PasswordReset&amp;client_id=4519800c-0ae4-476a-acc1-cff5a1420a42&amp;nonce=defaultNonce&amp;redirect_uri=https%3A%2F%2Fjwt.ms&amp;scope=openid&amp;response_type=id_token&amp;prompt=login"
+                  style="color: #f5f5f5"
+                  aria-label="Cancel"
+                  >Reset Password</a
+                >
+              </div>
             </div>
           </div>
         </div>
